# dryci

./: README.md
.github/workflows/: hello-world.yml
dryci_server/: .gitignore  db.go  go.mod  go.sum  main.go  utils.go
dryci_server/migrations/: 1.down.sql  1.up.sql
pytest_dryci/: .gitignore  build_all.sh  hatch_build.py  pyproject.toml
pytest_dryci/example_project/: .gitignore  README.md  pyproject.toml  repo_dagger.yaml
pytest_dryci/example_project/example_service/: module1.py  module2.py
pytest_dryci/example_project/example_service/common/: __init__.py
pytest_dryci/example_project/tests/: test_module1.py  test_module2.py
